# ros2-rover

./: .gitignore  AUTONOMOUS_MAPPING.md  CALIBRATION_AND_QUANTIZATION.md  CHANGES.md  CORRECTED_WORKFLOW.md  Dockerfile.pytorch-rocm  EXPLORER_README.md  FOXGLOVE_MONITORING.md  FOXGLOVE_SETUP.md  HARDWARE_MIGRATION_GUIDE.md  HIWONDER_MOTOR_UPDATE.md  LAUNCH_ISSUE_FIX_SUMMARY.md  NEURAL_NETWORK_OPTIMIZATION_README.md  NPU_EXPLORATION_IMPROVEMENT_PLAN.md  NPU_SLAM_RESEARCH.md  PROJECT_STATUS.md  README_SIMULATION.md  REALSENSE_INTEGRATION.md  REALSENSE_OPTIMIZATION_SUMMARY.md  REMOTE_TRAINING_QUICKSTART.md  REWARD_SYSTEM_ANALYSIS.md  RKLLAMA_SETUP.md  RKNN_CONVERSION_FIX.md  ROVER_SETUP.md  RTAB_OPTIMIZATION_TODO.md  TESTING_CHECKLIST.md  activate_nav2.sh  build.sh  convert_onnx_to_rknn.sh  dataset.txt  debug_i2c_motor.sh  docker-compose.simulation.yml  es_explanation.py  foxglove_autonomous_mapping.json  foxglove_manual_driving_config.json  foxglove_slam_mapping_config.json  foxglove_tractor_config.json  foxglove_tractor_dashboard.json  frames_2025-06-24_15.06.15.gv  frames_2025-06-24_15.22.21.gv  (+94 more)
sim/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  QUICK_START.md  README.md  URDF_INTEGRATION.md  __init__.py  habitat_config.yaml  habitat_config_from_urdf.yaml  habitat_episode_runner.py  package.xml  requirements.txt  start_habitat_training.sh  test_habitat_setup.py  urdf_to_habitat.py
sim/controllers/ros2_driver/: ros2_driver.py
sim/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  fastrtps_profile.xml
sim/launch/: webots_sim.launch.py
sim/protos/: TractorRover.proto
sim/worlds/: .training_arena.wbproj  training_arena.wbt
src/tractor_bringup/: package.xml  setup.cfg  setup.py
src/tractor_bringup/behavior_trees/: simple_nav.xml
src/tractor_bringup/config/: anti_overtraining_params.yaml  hiwonder_motor_params.yaml  nav2_params.yaml  nav2_params_localization.yaml  phase_manager.yaml  pointcloud_to_laserscan.yaml  realsense_config.yaml  realsense_no_imu.yaml  realsense_npu_minimal.yaml  realsense_usb_stable.yaml  reward_weights.yaml  robot_localization.yaml  rtabmap_params.yaml  slam_toolbox_params.yaml  xbox_teleop.yaml
src/tractor_bringup/launch/: autonomous_mapping.launch.py  autonomous_mapping_minimal.launch.py  classical_autonomous.launch.py  control.launch.py  control_with_feedback.launch.py  coverage_full.launch.py  coverage_mapping.launch.py  dreamer_remote_autonomous.launch.py  dreamer_remote_teleop.launch.py  es_sac_autonomous.launch.py  hiwonder_control.launch.py  implements.launch.py  lidar_frontier_exploration.launch.py  map_elites_autonomous.launch.py  navigation.launch.py  nomad_rknn_autonomous.launch.py  npu_exploration.launch.py  npu_exploration_bev.launch.py  npu_exploration_depth.launch.py  npu_exploration_ppo.launch.py  pc_active_inference.launch.py  pc_cognitive_map.launch.py  ppo_autonomous.launch.py  ppo_local_autonomous.launch.py  ppo_remote_autonomous.launch.py  realsense_nav2.launch.py  remote_trained_inference.launch.py  remote_training_collection.launch.py  rlpd_remote_autonomous.launch.py  rlpd_remote_teleop.launch.py  robot_description.launch.py  robot_localization.launch.py  rtab_frontier_exploration.launch.py  rtab_offline_training.launch.py  rtabmap_nav2.launch.py  sac_autonomous.launch.py  sensors.launch.py  slam_mapping.launch.py  tractor_bringup.launch.py  tractor_gazebo.launch.py  (+5 more)
src/tractor_bringup/tractor_bringup/: README_ANTI_OVERTRAINING.md  README_BEV_EXPLORATION.md  adaptive_reward_system.py  anti_overtraining_config.py  autonomous_mapping.py  bayesian_es_optimizer.py  bayesian_nas.py  bayesian_reward_optimizer.py  (+65 more)
src/tractor_explorer/: CMakeLists.txt  package.xml  setup.cfg  setup.py
(+835 files in other folders)
