<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesets="g"?>
<package format="3">
  <name>tractor_explorer</name>
  <version>0.1.0</version>
  <description>Deep Exploration Network — autonomous home mapping with RKNN NPU inference, lidar SLAM, and remote GPU training</description>
  <maintainer email="rover@rover.local">rover</maintainer>
  <license>MIT</license>



  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
